2006-08-11  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps: Remove comment with my name in it.
	Further tweak to the PatternBgnd macro.

2006-08-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/PostScript/cp437.ps term/PostScript/cp850.ps 
	term/PostScript/koi8r.ps: Remove superfluous C comment characters.

	* term/PostScript/cp852.ps: Remove my info.

2006-08-11  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* term/post.trm: Fix preprocessor logic for !defined(GNUPLOT_PS_DIR).

2006-08-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/PostScript/prologue.ps: Replace multiple spaces by a tabulator.

	* docs/doc2tex.c (puttex): Remove superfluous spaces around \index{x}.

2006-08-11 Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.nt: Define GNUPLOT_PS_DIR to use external PostScript
	prologue files.

2006-08-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Some comments in the help for bind and mouse
	variables. 

2006-08-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc
	Sync Japanese documentation to recent changes in English files.
	(rev.1.381) 08Aug2006

2006-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm term/PostScript/prologue.ps: Move the pattern-fill
	background initialization out of the terminal driver and into the
	prologue script, with a user-toggle at the top of the file. Allows
	pseudo-transparency, and complete redefinition of the pattern styles
	without rebuilding gnuplot.

2006-08-09  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* docs/Makefile.in: Revert change from 2006-07-18 (define
	GNUPLOT_PS_DIR), now useless as the PostScript prologue help no longer
	has any #ifdef.

2006-08-09  Bastian Maerkisch  <bmaerkisch@web.de>

	SF Patch [1505261] wgnuplot: open file-open-dialog in current dir

	* src/win/wmenu.c (SendMacro): Windows XP uses a strange initial
	directory for the file open dialog. This patch forces the dialog to