@@ -1,3 +1,8 @@
+2006-08-13  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* docs/doc2tex.c (puttex): Don't split index words at - or _; replace
+	_ by space.
+
 2006-08-11  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* term/PostScript/prologue.ps: Remove comment with my name in it.
